// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render ExpenseSummary with multiple expense 1`] = `
<div>
  <h1>
     Viewing 
    10
     
    expenses
     totalling 
    $25,666.65
  </h1>
</div>
`;
